# ChangeLog file for sql/src/backends/monet5
# This file is updated with mchangelog (Gentoo echangelog bastard script)

  02 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
  Implemented dynamic width of monetdb status output. If a database name is
  wider than 14 chars, the name column is made wider as long as the
  terminal window allows.  If a column cannot be made any wider this
  way, it is abbreviated as before.

*May2009

  15 May 2009; Fabian Groffen <fabian@cwi.nl> merovingian.1, merovingian.mx:
  Implemented Feature Request #2705670.  Reopen logfiles when SIGHUP is received.

  13 May 2009; Fabian Groffen <fabian@cwi.nl> merovingian.1, merovingian.mx:
  Implemented feature request #2782776. All logged messages are now prefixed
  with a timestamp.

  21 Apr 2009; Fabian Groffen <fabian@cwi.nl> merovingian.mx, monetdb.1:
  Instead of sending SIGTERM and immediately returning, call the
  terminateProcess function such that we nicely wait for the process to have
  died, and eventually send a SIGKILL if that fails. Fixes bug #2747661

  30 Mar 2009; Sjoerd Mullender <sjoerd@cwi.nl> monetdb.mx:
  If the logdir argument to logger_create is a relative path name, the
  logdir will be located inside the dbfarm/dbname directory.  If it is
  an absolute path name, that path is used.  Fixed monetdb destroy with
  regard to this new behaviour.

*Feb2009-SP1

  23 Mar 2009; Fabian Groffen <fabian@cwi.nl> merovingian.mx:
  Remove the pid file upon shutdown, fixes bug #2705666

  02 Mar 2009; Fabian Groffen <fabian@cwi.nl> monetdb.mx:
  Small cosmetic fix not to overflow the uptime in monetdb status display

  23 Feb 2009; Fabian Groffen <fabian@cwi.nl> ChangeLog:
  Fix hang on Linux when shutting down. select() calls are not interrupted on
  Linux, so make sure they time out. Fixes bug #2623838

  19 Feb 2009; Fabian Groffen <fabian@cwi.nl> merovingian.mx:
  Fixed crash of merovingian when a to be started database terminates